@@ -5,9 +5,9 @@ GCC_LINUX "11.2.1_git20220219-r2"
 MSVC_WINDOWS "2022"
 LLVM_CLANG_MACOS "14"
 MACOS_MIN "10.15"
-OPENSSL_LINUX   "3.1.1"
-OPENSSL_MACOS   "3.1.1"
-OPENSSL_WINDOWS "3.1.1"
+OPENSSL_LINUX   "3.1.2"
+OPENSSL_MACOS   "3.1.2"
+OPENSSL_WINDOWS "3.1.2"
 USE_RCLONE "true"
 RCLONE_VERSION "1.62.2"
 MINIMAL_DEBUG_INFO "On"
