@@ -6,7 +6,7 @@ test -n "$OPENSSLVERSION"
 export OPENSSLPATH=`echo $OPENSSLVERSION | sed 's/\([a-zA-Z]$\|\.[0-9]$\)//g'`
 
 # Compile openldap library:
-export OPENLDAPVERSION=2.6.4
+export OPENLDAPVERSION=2.6.6
 cd /tmp
 curl -O ftp://ftp.openldap.org/pub/OpenLDAP/openldap-release/openldap-$OPENLDAPVERSION.tgz
 tar xzf openldap-$OPENLDAPVERSION.tgz
