@@ -1,6 +1,8 @@
 devel
 -----
 
+* Updated OpenSSL to 3.1.2 and OpenLDAP to 2.6.6.
+
 * Updated arangosync to v2.19.2.
 
 * Updated ArangoDB Starter to 0.17.0.
